--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
   </head>
   <body class="page__body">
     <header class="header">
@@ -84,7 +82,7 @@
 
             <div
               class="product-slider__slide swiper-slide"
-              style="background-image: url('./images/product-slider/1.jpg')"
+              style="background-image: url('/images/product-slider/1.jpg')"
             >
               <div class="container">
                 <div class="product-slider__content">
@@ -122,7 +120,7 @@
 
             <div
               class="product-slider__slide swiper-slide"
-              style="background-image: url('./images/product-slider/1.jpg')"
+              style="background-image: url('/images/product-slider/1.jpg')"
             >
               <div class="container">
                 <div class="product-slider__content">
@@ -160,7 +158,7 @@
 
             <div
               class="product-slider__slide swiper-slide"
-              style="background-image: url('./images/product-slider/1.jpg')"
+              style="background-image: url('/images/product-slider/1.jpg')"
             >
               <div class="container">
                 <div class="product-slider__content">
@@ -261,7 +259,7 @@
               <div class="popular-content__item">
                 <img
                   class="popular-content__img"
-                  src="./images/popular/1.jpg"
+                  src="/images/popular/1.jpg"
                   alt="#"
                   width="600"
                   height="484"
@@ -289,7 +287,7 @@
               <div class="popular-content__item">
                 <img
                   class="popular-content__img"
-                  src="./images/popular/2.jpg"
+                  src="/images/popular/2.jpg"
                   alt="#"
                   width="600"
                   height="484"
@@ -363,7 +361,7 @@
             </div>
             <img
               class="about__img"
-              src="./images/about1.jpg"
+              src="/images/about1.jpg"
               alt="Product image"
               width="600"
               height="600"
@@ -378,7 +376,7 @@
             <div class="swiper-slide response__slide">
               <img
                 class="response__img"
-                src="./images/response/1.jpg"
+                src="/images/response/1.jpg"
                 alt="Customer photo."
                 width="583"
                 height="554"
@@ -403,7 +401,7 @@
             <div class="swiper-slide response__slide">
               <img
                 class="response__img"
-                src="./images/response/1.jpg"
+                src="/images/response/1.jpg"
                 alt="Customer photo."
                 width="583"
                 height="554"
@@ -428,7 +426,7 @@
             <div class="swiper-slide response__slide">
               <img
                 class="response__img"
-                src="./images/response/1.jpg"
+                src="/images/response/1.jpg"
                 alt="Customer photo."
                 width="583"
                 height="554"
@@ -577,9 +575,8 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./src/js/main.js"></script>
-    <script src="./src/js/slider.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="./src/js/slider.js"></script>
   </body>
 </html>
