--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="logo" href="#" aria-label="Logo image">
             <img
               class="logo__img"
-              src="./src/images/logo.svg"
+              src="/images/logo.svg"
               width="127"
               height="24"
               alt="Logo image."
@@ -46,7 +46,7 @@
             <div class="user-nav__link">
               <img
                 class="user-nav__icon"
-                src="./src/images/icons/user.svg"
+                src="/images/icons/user.svg"
                 width="24"
                 height="24"
                 alt="Icon user."
@@ -55,7 +55,7 @@
             <div class="user-nav__link">
               <img
                 class="user-nav__icon"
-                src="./src/images/icons/cart.svg"
+                src="/images/icons/cart.svg"
                 width="24"
                 height="24"
                 alt="Icon cart."
@@ -64,7 +64,7 @@
             <div class="user-nav__link">
               <img
                 class="user-nav__icon"
-                src="./src/images/icons/line.svg"
+                src="/images/icons/line.svg"
                 width="24"
                 height="24"
                 alt="Icon line."
@@ -205,32 +205,32 @@
           <div class="partners__inner">
             <img
               class="partners__img"
-              src="./src/images/partner/airbnb.png"
+              src="/images/partner/airbnb.png"
               alt="Partners logo"
             />
             <img
               class="partners__img"
-              src="./src/images/partner/hubspot.png"
+              src="/images/partner/hubspot.png"
               alt="Partners logo"
             />
             <img
               class="partners__img"
-              src="./src/images/partner/google.png"
+              src="/images/partner/google.png"
               alt="Partners logo"
             />
             <img
               class="partners__img"
-              src="./src/images/partner/microsoft.png"
+              src="/images/partner/microsoft.png"
               alt="Partners logo"
             />
             <img
               class="partners__img"
-              src="./src/images/partner/walmart.png"
+              src="/images/partner/walmart.png"
               alt="Partners logo"
             />
             <img
               class="partners__img"
-              src="./src/images/partner/fedex.png"
+              src="/images/partner/fedex.png"
               alt="Partners logo"
             />
           </div>
@@ -484,7 +484,7 @@
               <a class="logo" href="#" aria-label="Logo image">
                 <img
                   class="logo__img"
-                  src="./src/images/logo.svg"
+                  src="/images/logo.svg"
                   width="213"
                   height="50"
                   alt="Logo image."
@@ -536,7 +536,7 @@
                 >
                   <img
                     class="footer-bottom__social-link"
-                    src="./src/images/icons/fb.svg"
+                    src="/images/icons/fb.svg"
                     width="13"
                     height="13"
                     alt="Icon facebook."
@@ -549,7 +549,7 @@
                 >
                   <img
                     class="footer-bottom__social-link"
-                    src="./src/images/icons/twitter.svg"
+                    src="/images/icons/twitter.svg"
                     width="13"
                     height="13"
                     alt="Icon twitter."
@@ -562,7 +562,7 @@
                 >
                   <img
                     class="footer-bottom__social-link"
-                    src="./src/images/icons/insta.svg"
+                    src="/images/icons/insta.svg"
                     width="13"
                     height="13"
                     alt="Icon instagram."
